[package]
name = "sync_config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.23",  features = ["blocking"]}
anyhow = "1.0.79"
simple_logger = "4.3.3"
log = "0.4.20"
toml = "0.8.8"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.4.13", features = ["derive"] }

[profile.release]
opt-level = "z"
debug = false
lto = true
panic = 'abort'
